ejercicio switch, case con do while terminado

--- a/switchh/opciones.html
+++ b/switchh/opciones.html
@@ -9,6 +9,7 @@
     <script src="../switchJS/opciones.js"></script>
 </head>
 <body onload="opc()">
+    <div id=palabra></div>
     
 </body>
 </html>
